# kilterboard_grade_predictor

./: .gitignore  ReadMe.md  X_shap.npy  kilter_layout.json  kilterboard.py  kilterboard_grade_predictor.py  kilterboard_grade_predictor_ensemble.py  main.py  pyproject.toml  shap_values.npy
data/: get_climb_stats.py  get_climbs.py  get_displacements.py  get_table_data.py  kilter_layout.json
visualize_kilter_climbs/: vizualize_climb.py
